# csyrus-backend

./: .env.example  .gitignore  ARCHITECTURE.md  COLLABORATION.md  ENGINEERING_DECISIONS.md  README.md  main.py  pyproject.toml
app/api/: auth.py  requests.py  reviewer.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/database/: database.py  types.py
app/models/: __init__.py  enums.py  request.py  review.py  user.py
app/repositories/: request_repository.py  review_repository.py  user_repository.py
app/schemas/: request.py  review.py  user.py
app/services/: auth_service.py  request_service.py  reviewer_service.py
tests/: conftest.py  test_auth.py  test_requests.py  test_reviewer.py
